<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/welcome_background"
    tools:context=".ui.welcome.WelcomeFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/topHorizontalGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/welcomeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/rubik_regular"
        android:text="@string/welcome_to_label"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topHorizontalGuideline" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appNameTextView"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/rubik_medium"
        android:gravity="center"
        android:text="@string/system_booster_label"
        android:textColor="@color/white"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcomeTextView" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/mediumHorizontalGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/mediumVerticalGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/usedMemoryTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/rubik_bold"
        android:textColor="@color/red"
        android:textSize="50sp"
        app:layout_constraintEnd_toStartOf="@id/mediumVerticalGuideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mediumHorizontalGuideline"
        tools:text="60" />

    <TextView
        android:id="@+id/percentLabelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="4dp"
        android:fontFamily="@font/rubik_bold"
        android:text="@string/percent_symbol"
        android:textColor="@color/red"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="@id/usedMemoryTextView"
        app:layout_constraintStart_toEndOf="@id/usedMemoryTextView" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/usedMemoryLabelTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/rubik_regular"
        android:gravity="center"
        android:maxLines="1"
        android:paddingHorizontal="16dp"
        android:text="@string/used_space_label"
        android:textColor="@color/white"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="@id/mediumVerticalGuideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/usedMemoryTextView" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/freeMemoryTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="36dp"
        android:fontFamily="@font/rubik_bold"
        android:textColor="@color/white"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/mediumVerticalGuideline"
        app:layout_constraintTop_toBottomOf="@id/mediumHorizontalGuideline"
        tools:text="52.7" />

    <TextView
        android:id="@+id/gbLabelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="4dp"
        android:fontFamily="@font/rubik_bold"
        android:text="@string/gb_symbol"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="@id/freeMemoryTextView"
        app:layout_constraintStart_toEndOf="@id/freeMemoryTextView" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/freeMemoryLabelTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/rubik_regular"
        android:gravity="center"
        android:text="@string/free_space_label"
        android:textColor="@color/white"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/mediumVerticalGuideline"
        app:layout_constraintTop_toBottomOf="@id/usedMemoryTextView" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottomHorizontalGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.7" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/helpTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/rubik_regular"
        android:gravity="center"
        android:text="@string/well_help_you_with_your_first_cleaning_label"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bottomHorizontalGuideline" />

    <runtime.exception.cleanmyandroid.base.customViews.SliderView
        android:id="@+id/sliderView"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@id/freeMemoryTextView"
        app:layout_constraintStart_toStartOf="@id/usedMemoryTextView"
        app:layout_constraintTop_toBottomOf="@id/helpTextView" />

    <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        ads:adSize="FULL_BANNER"
        ads:adUnitId="@string/banner_test_id"
        ads:layout_constraintBottom_toBottomOf="parent"
        ads:layout_constraintEnd_toEndOf="parent"
        ads:layout_constraintStart_toStartOf="parent" />

    <runtime.exception.cleanmyandroid.base.customViews.OperationProgressView
        android:id="@+id/operationProgressView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" />

</androidx.constraintlayout.widget.ConstraintLayout>