<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/modalBottomSheet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/modal_bottom_sheet_background"
        app:behavior_peekHeight="120dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <ImageView
            android:id="@+id/iconOpenMenuImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/icon_open_menu_cd"
            android:src="@drawable/ic_modal_sheet_up"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/appManagerTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/rubik_medium"
            android:text="@string/application_manager_label"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@id/iconOpenMenuImageView"
            app:layout_constraintStart_toStartOf="@id/iconOpenMenuImageView"
            app:layout_constraintTop_toBottomOf="@id/iconOpenMenuImageView" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/exploreAppsListTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/rubik_regular"
            android:text="@string/explore_apps_list_label"
            android:textColor="@color/blind_gray"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@id/appManagerTextView"
            app:layout_constraintStart_toStartOf="@id/appManagerTextView"
            app:layout_constraintTop_toBottomOf="@id/appManagerTextView" />

        <ProgressBar
            android:id="@+id/appsProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:indeterminate="true"
            app:layout_constraintTop_toBottomOf="@id/exploreAppsListTextView" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/appsRecyclerView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:visibility="gone"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/exploreAppsListTextView"
            app:layout_goneMarginTop="10dp"
            tools:listitem="@layout/app_item" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>